style.css
*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0; /* Remove default margins */
	padding: 0; /* Remove default paddings */
	/* border: 1px solid grey; */
}

body {
	background: #121224;
	color: #e1e1f2;
	font-family: 'IBM Plex Mono', sans-serif;
}

.container {
	display: flex;
	flex-direction: column;
	/* align-items: center; */
	justify-content: space-between;
	margin: 0 auto;
	margin-top: 100px;
	/* border: 1px solid #121224; */
	border-radius: 10px;
	gap: 25px;
	background: #06060f;
	width: 350px;
	height: 710px;
}

p {
	margin: 40px 0 50px 40px;
	font-family: Syne;
	font-weight: 700;
	color: #a8ff3d;
}

.pre-display,
.display {
	margin: 0 40px 0px 0;
	font-size: 2.25rem;
	text-align: right;
}

.pre-display {
	font-size: 1.5rem;
	color: #4a4a70;
}

.btns {
	display: flex;
	justify-content: center;
	padding: 40px;
	background: #0c0c1c;
	border-radius: 20px 20px 10px 10px;
}

.row {
	display: flex;
	flex-direction: column;
	margin: 10px;
	gap: 10px;
}

button {
	height: 55px;
	width: 55px;
	border-radius: 50px;
	border: none;
	font-family: 'Noto Sans Math', sans-serif;
	font-size: 18px;
	background: none;
	color: #e1e1f2;
}

.noto-sans-math-regular {
	font-family: 'Noto Sans Math', sans-serif;
	font-weight: 400;
	font-style: normal;
}
.operator,
button:hover {
	background: #121224;
	cursor: pointer;
	font-family: 'Noto Sans Math', sans-serif;
	font-weight: 400;
	font-size: 18px;
	font-style: normal;
}

.equalSign {
	background: #a8ff3d;
	color: #06060f;
	flex: 2;
	font-weight: 400;
}

.operator:hover,
.equalSign:hover {
	color: #06060f;
	background: #a8ff3d;
	box-shadow: -1px 2px 10px rgb(168 255 61 / 35%);
}

.allClear {
	color: #ff4060;
}

.allClear:hover {
	background: #ff4060;
	color: #06060f;
}

